# tbd-http

./: .bazelrc  .clang-format  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  package.json  pnpm-lock.yaml
.aspect/rules/external_repository_action_cache/: npm_translate_lock_LTE4Nzc1MDcwNjU=
.bazelci/: presubmit.yml
.git_hooks/: pre-commit
docker/: BUILD  docker-compose.yml  docker-compose.yml.tpl  env.bzl
server/: BUILD  main.html  server.cc  server.h  server_main.cc  tbd.cc  tbd.h  tbd.js  tbd_impl.h  tbd_main.js  tbd_main_js.js  tbd_test.cc  tbd_test.js  test_main.cc
server/ui/: BUILD  package.json  tbd.ts  tbd_main.ts  terser.cfg.json  tsconfig.json
