module(
    name = "tbd_server",
)

bazel_dep(
    name = "abseil-cpp",
    version = "20250127.0",
)
bazel_dep(
    name = "aspect_rules_esbuild",
    version = "0.21.0",
)
bazel_dep(
    name = "aspect_rules_js",
    version = "2.2.0",
)
bazel_dep(
    name = "aspect_rules_terser",
    version = "2.0.0",
)
bazel_dep(
    name = "aspect_rules_ts",
    version = "3.5.0",
)
bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)
bazel_dep(
    name = "com_github_bcsgh_cc_embed_data",
    version = "0.0.3",
)
bazel_dep(
    name = "com_github_bcsgh_tbd",
    version = "0.0.1",
)

bazel_dep(
    name = "com_github_bcsgh_test_base",
    version = "0.0.1",
    dev_dependency = True,
)

bazel_dep(
    name = "com_github_etr_libhttpserver",
    version = "0.19.0",
)

bazel_dep(
    name = "googletest",
    version = "1.16.0",
    dev_dependency = True,
)

bazel_dep(
    name = "jsoncpp",
    version = "1.9.6",
)
bazel_dep(
    name = "rules_oci",
    version = "2.2.0",
)
bazel_dep(
    name = "rules_pkg",
    version = "1.0.1",
)

##############################
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "ubuntu_22_04",
    # https://gallery.ecr.aws/docker/library/ubuntu
    digest = "sha256:c9cf959fd83770dfdefd8fb42cfef0761432af36a764c077aed54bbc5bb25368",
    image = "public.ecr.aws/docker/library/ubuntu",  #:22.04",
    platforms = ["linux/amd64"],
)
use_repo(oci, "ubuntu_22_04")

##############################
PROJECTS = {
    "npm_typescript_app": "//server/ui:package.json",
}

EXT = dict([
    (
        k,
        use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext"),
    )
    for k in PROJECTS.keys()
])

[(
    EXT[k].deps(
        name = k,
        ts_version_from = v,
    ),
    use_repo(EXT[k], k),
) for k, v in PROJECTS.items()]

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")  # toolchain
npm.npm_translate_lock(
    name = "npm",
    data = [":package.json"],
    pnpm_lock = "//:pnpm-lock.yaml",
    update_pnpm_lock = True,
)
use_repo(npm, "npm")
